changes needed to build and deploy quarkus app using kn func deploy

--- a/quarkus/pom.xml
+++ b/quarkus/pom.xml
@@ -104,6 +104,8 @@
       <groupId>com.redhat.openshift.knative.showcase</groupId>
       <artifactId>frontend</artifactId>
       <version>main</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/src/lib/frontend-main.jar</systemPath>
     </dependency>
 
     <dependency>
